--- a/pasta-css/home.css
+++ b/pasta-css/home.css
@@ -504,7 +504,7 @@ h2 {
 
 /* Esconde a imagem padrão somente quando estiver logado */
 body.logado .profile-img img[src*="SemFoto.jpg"] {
-  display: none;
+    display: none;
 }
 
 .fim-direita {
@@ -635,6 +635,11 @@ body.modo-sepia .linha-horizontal {
 }
 
 @media (max-width: 399px) {
+
+    /* Esconde a imagem padrão somente quando estiver logado */
+    body.logado .profile-img img[src*="SemFoto.jpg"] {
+        display: none;
+    }
 
     .livros-lista {
         display: grid;
@@ -939,6 +944,11 @@ body.modo-sepia .linha-horizontal {
 }
 
 @media (max-width: 768px) and (min-width: 400px) {
+
+    /* Esconde a imagem padrão somente quando estiver logado */
+    body.logado .profile-img img[src*="SemFoto.jpg"] {
+        display: none;
+    }
 
     body {
         height: auto;
