--- a/pasta-css/perfil.css
+++ b/pasta-css/perfil.css
@@ -84,6 +84,14 @@ body {
   /* Cor azul */
 }
 
+body.modo-noturno .profile-avatar-wrapper {
+  border: 4px solid white;
+}
+
+body.modo-sepia .profile-avatar-wrapper {
+  border: 4px solid #8d613f;
+}
+
 #profile-avatar {
   width: 100%;
   height: 100%;
@@ -166,6 +174,14 @@ body {
   text-align: center;
 }
 
+body.modo-claro .book-card {
+  background-color: rgb(197, 193, 193);
+}
+
+body.modo-sepia .book-card {
+  background-color: #825027;
+}
+
 .book-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 15px rgba(0, 255, 255, 0.1);
@@ -185,11 +201,19 @@ body {
   padding: 10px 12px 5px 12px;
   margin: 0;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   min-height: 2.7rem;
+}
+
+body.modo-claro .book-card h4 {
+  color: black;
+}
+
+
+body.modo-sepia .book-card h4 {
+  color: #332012;
 }
 
 .progress-bar-container {
@@ -212,6 +236,11 @@ body {
   font-weight: 300;
   color: #aaa;
   padding: 4px 12px 10px 12px;
+  font-size: bold;
+}
+
+body.modo-claro .progress-percentage {
+  color: black;
 }
 
 .empty-message {
@@ -344,14 +373,6 @@ body {
     /* Empilha as colunas */
   }
 
-  /* Ajusta o grid de livros para 3 colunas */
-  #inprogress-grid,
-  #concluded-grid {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    justify-content: unset;
-    /* Deixa preencher */
-  }
-
   .books-column {
     order: 2;
     /* Colunas de livros vão para baixo */
@@ -376,9 +397,24 @@ body {
     position: relative;
     font-size: 17px;
   }
+
+  .book-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
 }
 
 @media (min-width: 400px) and (max-width: 768px) {
+  .book-card img {
+    width: 100%;
+    height: 210px;
+    object-fit: cover;
+    display: block;
+  }
+
   .book-section1 h2 {
     margin-bottom: 30PX;
     right: 45px;
@@ -419,14 +455,6 @@ body {
   .profile-layout {
     grid-template-columns: 1fr;
     /* Empilha as colunas */
-  }
-
-  /* Ajusta o grid de livros para 3 colunas */
-  #inprogress-grid,
-  #concluded-grid {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    justify-content: unset;
-    /* Deixa preencher */
   }
 
   .books-column {
