--- a/pasta-css/livros.css
+++ b/pasta-css/livros.css
@@ -8,28 +8,9 @@ body.logado .profile-img img[src*="SemFoto.jpg"] {
   display: none;
 }
 
-
-.breadcrumb {
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  margin: 20px 0;
-  position: relative;
-  top: 50px;
-  left: 103px;
-  z-index: 9999;
-  white-space: nowrap;
-  width: 138px;
-}
-
-.breadcrumb span {
-  font-weight: bold;
-  color: #333;
-  text-transform: uppercase;
-}
-
-
 body.modo-noturno .menu-lateral {
   background: black;
+  border-right: 1px solid white;
 }
 
 body.modo-sepia .menu-lateral {
@@ -51,15 +32,16 @@ body.modo-noturno .menu-lateral button {
 }
 
 .menu-lateral {
-  width: 220px;
+  width: 287px;
   background: #000;
   padding: 20px;
-  border-right: 1px solid white;
+  border-right: 2px solid white;
   text-align: center;
   margin-top: 26px;
   bottom: auto;
   height: auto;
   color: white;
+  margin-right: 41px;
 }
 
 #generoSelecionadoTexto {
@@ -70,7 +52,7 @@ body.modo-noturno .menu-lateral button {
   margin-bottom: 15px;
   font-size: 18px;
   color: #365BA3;
-  margin-right: 20px;
+  margin-right: 10px;
 
 }
 
@@ -91,7 +73,7 @@ body.modo-noturno .menu-lateral button {
   cursor: pointer;
   font-size: 15px;
   color: black;
-  margin-right: 20px;
+  margin-right: 10px;
 
 }
 
@@ -99,7 +81,8 @@ body.modo-noturno .menu-lateral button {
 .livrossection {
   flex: 1;
   position: relative;
-  right: 56px;
+  right: 19.5px;
+  bottom: 40px;
 }
 
 .livrossection.modo-noturno {
@@ -273,9 +256,23 @@ body.modo-noturno .menu-lateral button {
   .menu-lateral {
     width: 100%;
     margin-top: 10px;
-    margin-bottom: -40px;
+    margin-bottom: 40px;
     border-right: none;
-    border-bottom: 1px solid #ccc;
+  }
+
+  body.modo-noturno .menu-lateral {
+    border-right: none;
+    border-bottom: 2px solid white;
+  }
+
+  body.modo-sepia .menu-lateral {
+    border-right: none;
+    border-bottom: 1px solid black;
+  }
+
+  body.modo-claro .menu-lateral {
+    border-right: none;
+    border-bottom: 2px solid black;
   }
 
   .livrossection {
@@ -345,14 +342,6 @@ body.modo-noturno .menu-lateral button {
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-top: auto;
-
-  }
-
-
-  .breadcrumb {
-    left: 20px;
-    top: 20px;
-    width: auto;
 
   }
 
