--- a/pasta-css/perfil.css
+++ b/pasta-css/perfil.css
@@ -84,6 +84,14 @@ body {
   /* Cor azul */
 }
 
+body.modo-noturno .profile-avatar-wrapper {
+  border: 4px solid white;
+}
+
+body.modo-sepia .profile-avatar-wrapper {
+  border: 4px solid #8d613f;
+}
+
 #profile-avatar {
   width: 100%;
   height: 100%;
@@ -166,6 +174,14 @@ body {
   text-align: center;
 }
 
+body.modo-claro .book-card {
+  background-color: rgb(197, 193, 193);
+}
+
+body.modo-sepia .book-card {
+  background-color: #825027;
+}
+
 .book-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 15px rgba(0, 255, 255, 0.1);
@@ -185,11 +201,19 @@ body {
   padding: 10px 12px 5px 12px;
   margin: 0;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   min-height: 2.7rem;
+}
+
+body.modo-claro .book-card h4 {
+  color: black;
+}
+
+
+body.modo-sepia .book-card h4 {
+  color: #332012;
 }
 
 .progress-bar-container {
@@ -212,6 +236,11 @@ body {
   font-weight: 300;
   color: #aaa;
   padding: 4px 12px 10px 12px;
+  font-size: bold;
+}
+
+body.modo-claro .progress-percentage {
+  color: black;
 }
 
 .empty-message {
@@ -307,20 +336,41 @@ body {
 /* ===========================================
    5. Responsividade
    =========================================== */
+@media (max-width: 400px) {
+  .book-section1 h2 {
+    margin-bottom: 20PX;
+  }
 
-/* Telas de tablet/menores */
-@media (max-width: 1000px) {
+  .book-section2 h2 {
+    margin-bottom: 10PX;
+  }
+
+  #user-name {
+    font-size: 0.8rem;
+    margin: 1rem 0 0.4rem;
+  }
+
+  /* Ajusta o grid de livros para 2 colunas */
+  #inprogress-grid,
+  #concluded-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .profile-header-card {
+    margin-right: 12px;
+  }
+
+  .profile-center {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-right: 15px;
+    width: 100%;
+  }
+
   .profile-layout {
     grid-template-columns: 1fr;
     /* Empilha as colunas */
-  }
-
-  /* Ajusta o grid de livros para 3 colunas */
-  #inprogress-grid,
-  #concluded-grid {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    justify-content: unset;
-    /* Deixa preencher */
   }
 
   .books-column {
@@ -331,24 +381,90 @@ body {
   .profile-center {
     order: 1;
     /* Card do perfil vai para cima */
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
+
+  .book-section1 h2 {
+    margin-bottom: 30PX;
+    right: 50px;
+    position: relative;
+    font-size: 17px;
+  }
+
+  .book-section2 h2 {
+    margin-bottom: 30PX;
+    right: 40px;
+    position: relative;
+    font-size: 17px;
+  }
+
+  .book-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
 }
 
-/* Telas de celular */
-@media (max-width: 600px) {
+@media (min-width: 400px) and (max-width: 768px) {
+  .book-card img {
+    width: 100%;
+    height: 210px;
+    object-fit: cover;
+    display: block;
+  }
+
+  .book-section1 h2 {
+    margin-bottom: 30PX;
+    right: 45px;
+    position: relative;
+    font-size: 21px;
+  }
+
+  .book-section2 h2 {
+    margin-bottom: 30PX;
+    right: 30px;
+    position: relative;
+    font-size: 21px;
+  }
+
+  #user-name {
+    font-size: 1.0rem;
+    margin: 1rem 0 0.4rem;
+  }
 
   /* Ajusta o grid de livros para 2 colunas */
   #inprogress-grid,
   #concluded-grid {
     grid-template-columns: repeat(2, 1fr);
   }
-}
 
-/* Ajuste fino de fonte em telas pequenas */
-@media (max-width: 768px) {
-  #user-name {
-    font-size: 1.1rem;
-    margin: 1rem 0 0.4rem;
+  .profile-header-card {
+    margin-right: 5px;
+  }
+
+  .profile-center {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-right: 5px;
+    width: 100%;
+  }
+
+  .profile-layout {
+    grid-template-columns: 1fr;
+    /* Empilha as colunas */
+  }
+
+  .books-column {
+    order: 2;
+    /* Colunas de livros vão para baixo */
+  }
+
+  .profile-center {
+    order: 1;
+    /* Card do perfil vai para cima */
+    margin-bottom: 10px;
   }
 }
